--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,31 @@
-body{
+body {
 	background-color: lightgray;
 }
+
+#board {
+	display: flex;
+	align-items: center;
+}
+
+#cards {
+	border:2px solid navy;
+	border-radius: 10px;
+	width: 160px;
+	height: 260px;
+	margin: 10px;
+	float: left;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	transition: background 0.3s ease-in-out;
+}
+
+#score {
+	width: 200px;
+	height: 10px;
+	padding: 50px;
+	border-radius: 200px;
+	font-size: 20px;
+}
+
+
