--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,17 @@ body {
 	background-color: lightgray;
 }
 
-#board {
+#content {
 	display: flex;
 	align-items: center;
 }
 
-#cards {
+#board {
+	margin: 0 auto;
+	width: 738px;
+}
+
+.card {
 	border:2px solid navy;
 	border-radius: 10px;
 	width: 160px;
@@ -28,4 +33,47 @@ body {
 	font-size: 20px;
 }
 
+#victory, #gameOver {
+	z-index: 100;
+	opacity: .9;
+	margin: 0 auto;
+	background-color: whitesmoke;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: none;
+}
 
+#victory h1, #gameOver h1 {
+	font-size: 64px;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 200px;
+	width: 100%;
+}
+
+#victory div, #gameOver div {
+	margin-top: 100px;
+	text-align: center;
+	width: 100%;
+}
+
+#victory div button, #gameOver div button {
+	font-size: 48px;
+	text-decoration: none;
+	padding: 10px;
+	font-weight: 600;
+	font-size: 20px;
+	color: #ffffff;
+	background-color: #1883ba;
+	border-radius: 6px;
+}
+
+#victory div button:hover, #gameOver div button:hover {
+	color: #ffffff;
+	background-color: #15709e;
+}
+
+#score, #clock {
+	font-size: 32px;
+}
