--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,13 @@ body {
 #timer {
 	display: flex;
 	align-items: baseline;
+	margin-left: 10px;
 }
 
 #content {
 	display: flex;
 	align-items: center;
+	font-family: Courier New;
 }
 
 #board {
@@ -19,7 +21,7 @@ body {
 
 .card {
 	border:2px solid;
-	border-radius: 5px;
+	border-radius: 10px;
 	width: 160px;
 	height: 260px;
 	margin: 10px;
@@ -33,7 +35,7 @@ body {
 
 
 #score, #clock {
-	font-size: 32px;
+	font-size: 38px;
 	flex: 1;
 	padding-top: 2%;
 	padding-bottom: 2%;
@@ -43,12 +45,17 @@ body {
 #victory, #gameOver {
 	z-index: 100;
 	opacity: .9;
-	margin: 0 auto;
 	background-color: whitesmoke;
-	width: 100%;
-	height: 100%;
+	width: 99.6%;
+	height: 105%;
 	position: absolute;
 	display: none;
+}
+
+#victory div, #gameOver div {
+	margin-top: 100px;
+	text-align: center;
+	width: 100%;
 }
 
 #victory h1, #gameOver h1 {
@@ -59,10 +66,9 @@ body {
 	width: 100%;
 }
 
-#victory div, #gameOver div {
-	margin-top: 100px;
+#victory .scoreAlert, #gameOver .scoreAlert{
+	font-size: 40px;
 	text-align: center;
-	width: 100%;
 }
 
 #victory div button, #gameOver div button {
@@ -74,6 +80,7 @@ body {
 	color: #ffffff;
 	background-color: #1883ba;
 	border-radius: 6px;
+	font-family: Courier New;
 }
 
 #victory div button:hover, #gameOver div button:hover {
