--- a/css/styles.css
+++ b/css/styles.css
@@ -113,3 +113,46 @@ body {
 	color: #ffffff;
 	background-color: #15709e;
 }
+
+/*Media queries*/
+@media screen and (max-width: 750px) {
+	#board {
+		width: 615px;
+	}
+	.card {
+		width: 130px;
+		height: 230px;
+	}
+	#score, #clock, #reset {
+	font-size: 28px;
+	}
+}
+@media screen and (max-width: 630px) {
+	#board {
+		width: 495px;
+	}
+	.card {
+		width: 100px;
+		height: 160px;
+	}
+	#score, #clock, #reset {
+		font-size: 24px;
+	}
+}
+@media screen and (max-width: 510px) {
+	#board {
+		width: 380px;
+	}
+	.card {
+		width: 70px;
+		height: 110px;
+	}
+	#score, #clock, #reset {
+		font-size: 14px;
+	}
+}
+@media screen and (max-width: 390px) {
+	#board {
+		width: 280px;
+	}
+}
