--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+@font-face {
+	font-family: simpsons;
+	src: url(../fonts/simpsonsFont.otf);
+}
+
 body {
 	background-color: gainsboro;
+	background-image: url("../img/wallpaper2.jpg");
 }
 
 #timer {
@@ -7,12 +13,15 @@ body {
 	align-items: baseline;
 	margin-left: 10px;
 	width: 97%;
+	background-color: rgba(255, 255, 255, 0.7);
+	border-radius: 10px;
+	border: 2px solid;
 }
 
 #content {
 	display: flex;
 	align-items: center;
-	font-family: Courier New;
+	font-family: simpsons;
 }
 
 #board {
@@ -40,17 +49,11 @@ body {
 	flex: 1;
 	padding-top: 2%;
 	padding-bottom: 2%;
-}
-
-#score {
-	padding-right: 6%;
+	text-align: center;
 }
 
 #reset {
-	border: 2px solid;
-	border-radius: 10px;
 	text-align: center;
-	padding: 5px;
 }
 
 #reset a {
@@ -58,15 +61,15 @@ body {
 	color: black;
 }
 
+#clock:hover, #score:hover, #reset:hover, #reset:hover a {
+    	background-color: black;
+	color: #15709e;
+	cursor: default;
+}
+
 #reset a:hover {
-	color: white;
-}
-
-#reset:hover {
 	cursor: pointer;
-	background-color: black;
 }
-
 
 #victory, #gameOver {
 	z-index: 100;
@@ -106,12 +109,13 @@ body {
 	color: #ffffff;
 	background-color: #1883ba;
 	border-radius: 6px;
-	font-family: Courier New;
+	font-family: simpsons;
 }
 
 #victory div button:hover, #gameOver div button:hover {
 	color: #ffffff;
 	background-color: #15709e;
+	cursor: pointer;
 }
 
 /*Media queries*/
