Fixed minor issues on responsive design, minor upgrades

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 	display: flex;
 	align-items: baseline;
 	margin-left: 10px;
-	width: 97%;
+	width: 96%;
 	background-color: rgba(255, 255, 255, 0.7);
 	border-radius: 10px;
 	border: 2px solid;
@@ -26,14 +26,14 @@ body {
 
 #board {
 	margin: 0 auto;
-	width: 738px;
+	width: 615px;
 }
 
 .card {
 	border:2px solid;
 	border-radius: 10px;
-	width: 160px;
-	height: 260px;
+	width: 130px;
+	height: 210px;
 	margin: 10px;
 	float: left;
 	background-repeat: no-repeat;
@@ -43,12 +43,9 @@ body {
 	transition: background 0.3s ease-in-out;
 }
 
-
 #score, #clock, #reset {
-	font-size: 38px;
+	font-size: 32px;
 	flex: 1;
-	padding-top: 2%;
-	padding-bottom: 2%;
 	text-align: center;
 }
 
@@ -75,10 +72,11 @@ body {
 	z-index: 100;
 	opacity: .9;
 	background-color: whitesmoke;
-	width: 99.6%;
-	height: 105%;
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	display: none;
+	left: 0
 }
 
 #victory div, #gameOver div {
@@ -118,22 +116,25 @@ body {
 	cursor: pointer;
 }
 
+
+
 /*Media queries*/
-@media screen and (max-width: 750px) {
+
+@media screen and (max-width: 1300px) {
 	#board {
-		width: 615px;
+		width: 553px;
 	}
+
 	.card {
-		width: 130px;
-		height: 230px;
-	}
-	#score, #clock, #reset {
-	font-size: 28px;
+		width: 115px;
+		height: 175px;
 	}
 }
+
+
 @media screen and (max-width: 630px) {
 	#board {
-		width: 495px;
+		width: 493px;
 	}
 	.card {
 		width: 100px;
@@ -143,9 +144,10 @@ body {
 		font-size: 24px;
 	}
 }
+
 @media screen and (max-width: 510px) {
 	#board {
-		width: 380px;
+		width: 373px;
 	}
 	.card {
 		width: 70px;
@@ -155,6 +157,7 @@ body {
 		font-size: 14px;
 	}
 }
+
 @media screen and (max-width: 390px) {
 	#board {
 		width: 280px;
