--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
 
 #board {
 	margin: 0 auto;
-	width: 615px;
+	width: 623px;
 }
 
 .card {
@@ -49,11 +49,9 @@ body {
 	text-align: center;
 }
 
-#reset {
-	text-align: center;
-}
+#reset { text-align: center; }
 
-#reset a {
+#reset a { 
 	text-decoration: none;
 	color: black;
 }
@@ -64,9 +62,7 @@ body {
 	cursor: default;
 }
 
-#reset a:hover {
-	cursor: pointer;
-}
+#reset a:hover { cursor: pointer; }
 
 #victory, #gameOver {
 	z-index: 100;
@@ -118,23 +114,11 @@ body {
 
 
 
-/*Media queries*/
-
-@media screen and (max-width: 1300px) {
-	#board {
-		width: 553px;
-	}
-
-	.card {
-		width: 115px;
-		height: 175px;
-	}
-}
-
+/* Media queries */
 
 @media screen and (max-width: 630px) {
 	#board {
-		width: 493px;
+		width: 500px;
 	}
 	.card {
 		width: 100px;
@@ -147,7 +131,7 @@ body {
 
 @media screen and (max-width: 510px) {
 	#board {
-		width: 373px;
+		width: 377px;
 	}
 	.card {
 		width: 70px;
@@ -160,6 +144,6 @@ body {
 
 @media screen and (max-width: 390px) {
 	#board {
-		width: 280px;
+		width: 285px;
 	}
 }
