--- a/css/styles.css
+++ b/css/styles.css
@@ -7,33 +7,35 @@ body {
 	background-color: gainsboro;
 	background-image: url("../img/wallpaper2.jpg");
 }
-
 #timer {
 	display: flex;
 	align-items: baseline;
 	margin-left: 10px;
-	width: 96%;
+	width: 542px;
 	background-color: rgba(255, 255, 255, 0.7);
-	border-radius: 10px;
+	border-radius: 4px;
 	border: 2px solid;
 }
 
-#content {
-	display: flex;
-	align-items: center;
+#content {	
+	height: 680px;
+	width: 100%;
+	max-width: 1180px;
+	margin: 0 auto;
 	font-family: simpsons;
 }
 
 #board {
 	margin: 0 auto;
-	width: 623px;
+	width: 55%;
+	
 }
 
 .card {
 	border:2px solid;
 	border-radius: 10px;
-	width: 130px;
-	height: 210px;
+	width: 118px;
+	height: 190px;
 	margin: 10px;
 	float: left;
 	background-repeat: no-repeat;
@@ -56,38 +58,36 @@ body {
 	color: black;
 }
 
-#clock:hover, #score:hover, #reset:hover, #reset:hover a {
-    	background-color: black;
-	color: #15709e;
+#reset:hover a {
 	cursor: default;
 }
 
 #reset a:hover { cursor: pointer; }
 
 #victory, #gameOver {
-	z-index: 100;
 	opacity: .9;
-	background-color: whitesmoke;
+	background-color: white;
 	width: 100%;
-	height: 100%;
+	height: 80vh;
+	border-radius: 4px;
 	position: absolute;
 	display: none;
-	left: 0
+	left: -4%;
 }
 
 #victory div, #gameOver div {
-	margin-top: 50px;
+	margin-top: 10px;
 	text-align: center;
 	width: 100%;
 }
 
 #victory h1, #gameOver h1 {
-	font-size: 64px;
+	font-size: 75px;
 	text-align: center;
-	margin: 0 auto;
-	margin-top: 200px;
 	width: 100%;
 }
+
+#gameOver h1 { margin-top: 120px; }
 
 #victory .scoreAlert, #gameOver .scoreAlert{
 	font-size: 40px;
@@ -97,13 +97,14 @@ body {
 #victory div button, #gameOver div button {
 	font-size: 48px;
 	text-decoration: none;
-	padding: 18px;
+	padding-left: 12px;
+	padding-right: 12px;
 	font-weight: 600;
-	font-size: 25px;
+	font-size: 32px;
 	color: #ffffff;
 	background-color: #1883ba;
-	border-radius: 6px;
-	font-family: simpsons;
+	border-radius: 5px;
+	border: 1px solid white;
 }
 
 #victory div button:hover, #gameOver div button:hover {
@@ -113,37 +114,382 @@ body {
 }
 
 
-
 /* Media queries */
-
-@media screen and (max-width: 630px) {
+@media screen and (max-width:  1120px) {
 	#board {
-		width: 500px;
+		width: 60%;
 	}
-	.card {
-		width: 100px;
-		height: 160px;
+	#content {
+		height: 665px;
 	}
 	#score, #clock, #reset {
-		font-size: 24px;
+		font-size: 26px;
 	}
 }
 
-@media screen and (max-width: 510px) {
+@media screen and (max-width:  1000px) {
 	#board {
-		width: 377px;
+		width: 67%;
 	}
-	.card {
+}
+
+@media screen and (max-width:  920px) {
+	#board {
+		width: 70%;
+	}
+}
+
+@media screen and (max-width:  860px) {
+	#board {
+		width: 75%;
+	}
+}
+
+@media screen and (max-width:  790px) {
+	#board {
+		width: 80%;
+	}
+}
+
+@media screen and (max-width:  720px) {
+	#board {
+		width: 90%;
+	}
+}
+
+@media screen and (max-width:  670px) {
+	#board {
+		width: 95%;
+	}
+}
+
+@media screen and (max-width:  650px) {
+	#board {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width:  640px) {
+	#timer { 
+		width: 442px;
+		margin-left: 7px;
+	}
+	#content {
+		height: 563px;
+	}
+	.card{
+		width: 100px;
+		height: 161px;
+		margin: 7px;
+	}
+}
+@media screen and (max-width:  560px) {
+	#content {
+		height: 558px;
+	}
+	#score, #clock, #reset {
+		font-size: 22px;
+	}
+}
+
+@media screen and (max-width:  519px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  511px) {
+	#timer { 
+		width: 390px;
+		margin-left: 5px;
+	}
+	.card{
+		width: 90px;
+		height: 145px;
+		margin: 5px;
+	}
+	#content {
+		height: 497px;
+	}
+	#score, #clock, #reset {
+		font-size: 20px;
+	}
+	#victory h1, #gameOver h1 {
+		font-size: 48px;
+	}
+	#victory .scoreAlert, #gameOver .scoreAlert{
+		font-size: 20px;
+	}
+	#victory div button, #gameOver div button {
+		font-size: 26px;
+	}
+	#victory, #gameOver {
+		left: -4%;
+	}
+}
+
+@media screen and (max-width:  519px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  449px) {
+	#timer { 
+		width: 344px;
+		margin-left: 4px;
+	}
+	.card{
+		width: 80px;
+		height: 129px;
+		margin: 4px;
+	}
+	#content {
+		height: 444px;
+	}
+}
+
+@media screen and (max-width:  431px) {
+	#content {
+		height: 445px;
+	}
+}
+
+@media screen and (max-width:  402px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  395px) {
+	#timer { 
+		width: 304px;
+		margin-left: 4px;
+	}
+	.card{
 		width: 70px;
-		height: 110px;
+		height: 113px;
+	}
+	#content {
+		height: 395px;
+	}
+	#victory, #gameOver {
+		left: -4%;
+	}
+}
+
+@media screen and (max-width:  356px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  351px) {
+	#timer { 
+		width: 278px;
+		margin-left: 3px;
+	}
+	.card{
+		width: 65px;
+		height: 105px;
+		margin: 3px;
+	}
+	#content {
+		height: 364px;
+	}
+	#score, #clock, #reset {
+		font-size: 18px;
+	}
+}
+
+@media screen and (max-width:  324px) {
+	#victory h1, #gameOver h1 {
+		font-size: 36px;
+	}
+	#victory div button, #gameOver div button {
+		font-size: 20px;
+	}
+}
+
+@media screen and (max-width:  318px) {
+	#victory, #gameOver {
+		left: 0%;
+	}
+}
+
+@media screen and (max-width:  315px) {
+	#timer { 
+		width: 207px;
+	}
+	#content {
+		height: 470px;
 	}
 	#score, #clock, #reset {
 		font-size: 14px;
 	}
+	#victory h1, #gameOver h1 {
+		font-size: 22px;
+		margin-top: 60px;
+	}
+	#victory div button, #gameOver div button {
+		font-size: 14px;
+	}
+	#victory .scoreAlert, #gameOver .scoreAlert{
+		font-size: 14px;
+	}
+	#victory, #gameOver {
+		left: -11%;
+	}
 }
 
-@media screen and (max-width: 390px) {
-	#board {
-		width: 285px;
+@media screen and (max-width:  261px) {
+	#victory, #gameOver {
+		left: -6%;
+	}
+}
+
+@media screen and (max-width:  248px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  241px) {
+	#timer { 
+		width: 173px;
+		margin-left: 2px;
+		border: 1px solid;
+		border-radius: 2px;
+	}
+	.card{
+		width: 55px;
+		height: 89px;
+		margin: 2px;
+		border: 1px solid;
+		border-radius: 2px;
+	}
+	#content {
+		height: 395px;
+	}
+	#score, #clock, #reset {
+		font-size: 12px;
+	}
+	#victory, #gameOver {
+		left: -5%;
+	}
+}
+
+@media screen and (max-width:  203px) {
+	#victory, #gameOver {
+		left: -4%;
+	}
+}
+
+@media screen and (max-width:  201px) {
+	#timer { 
+		width: 139px;
+		margin-left: 1px;
+	}
+	.card{
+		width: 45px;
+		height: 73px;
+		margin: 1px;
+
+	}
+	#content {
+		height: 320px;
+	}
+	#score, #clock, #reset {
+		font-size: 10px;
+	}
+	#victory, #gameOver {
+		left: -11%;
+	}
+}
+
+@media screen and (max-width:  174px) {
+	#victory, #gameOver {
+		left: -3%;
+	}
+}
+
+@media screen and (max-width:  158px) {
+	#timer { 
+		width: 112px;
+	}
+	.card{
+		width: 36px;
+		height: 58px;
+	}
+	#content {
+		height: 255px;
+	}
+	#score, #clock, #reset {
+		font-size: 7px;
+	}
+	#victory h1, #gameOver h1 {
+		margin-top: 30px;
+		font-size: 16px;
+	}
+	#victory, #gameOver {
+		left: -3%;
+	}
+}
+
+@media screen and (max-width:  135px) {
+	#victory, #gameOver {
+		left: -2%;
+	}
+}
+
+@media screen and (max-width:  128px) {
+	#timer { 
+		width: 88px;
+	}
+	#content {
+		height: 196px;
+	}
+	.card{
+		width: 28px;
+		height: 44px;
+	}
+	#score, #clock, #reset {
+		font-size: 6px;
+	}
+	#victory h1, #gameOver h1 {
+		margin-top: 20px;
+		font-size: 12px;
+	}
+	#victory, #gameOver {
+		left: -9%;
+	}
+	#victory div button, #gameOver div button {
+		font-size: 8px;
+		padding-left: 6px;
+		padding-right: 6px;
+	}
+}
+
+@media screen and (max-width:  107px) {
+	#victory, #gameOver {
+		left: -1%;
+	}
+}
+@media screen and (max-width:  99px) {
+	#timer { 
+		width: 58px;
+	}
+	#content {
+		height: 294px;
+	}
+	.card{
+		width: 28px;
+		height: 44px;
+	}
+	#score, #clock, #reset {
+		font-size: 5px;
+	}
+	#victory, #gameOver {
+		left: -6%;
 	}
 }
